syntax = "proto3";
option java_multiple_files = true;
package com.drathveloper.grpc;

import "google/protobuf/timestamp.proto";

message UserAddress {
  string country = 1;
  string city = 2;
  string state = 3;
  string address = 4;
  string postalCode = 5;
}

message User {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  google.protobuf.Timestamp birthDate = 6;
  UserAddress address = 7;
}

message CreatedUser {
  int64 id = 1;
  string username = 2;
}

message UserBulkLoadRequest {
  repeated User users = 1;
}

message UserBulkLoadResponse {
  repeated CreatedUser createdUsers = 1;
}

service UserService {
  rpc bulkLoad(UserBulkLoadRequest) returns(UserBulkLoadResponse);
  rpc bulkLoadServerStream(UserBulkLoadRequest) returns(stream CreatedUser);
  rpc bulkLoadClientStream(stream User) returns(UserBulkLoadResponse);
  rpc bulkLoadBidirectionalStream(stream User) returns(stream CreatedUser);
}
